Added new components and changed styles

--- a/C#/UmbracoPracticeProject/MarketPlaceApp/Views/Main.cshtml
+++ b/C#/UmbracoPracticeProject/MarketPlaceApp/Views/Main.cshtml
@@ -8,9 +8,9 @@
 <html lang="en">
 
 <head>
-    @await Html.PartialAsync("meta");
+    @await Html.PartialAsync("meta")
     
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Peter's Uitverkoop</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -24,13 +24,13 @@
 </head>
 
 <body id="page-top">
-    @await Html.PartialAsync("mainNavigation");
+    @await Html.PartialAsync("mainNavigation")
 
     @RenderBody()
 
-    @await Html.PartialAsync("footer");
+    @await Html.PartialAsync("footer")
    
-    @await Html.PartialAsync("partialModals");
+    @* @await Html.PartialAsync("partialModals") *@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
