--- a/C#/UmbracoPracticeProject/MarketPlaceApp/Views/HomePage.cshtml
+++ b/C#/UmbracoPracticeProject/MarketPlaceApp/Views/HomePage.cshtml
@@ -5,9 +5,9 @@
     Layout = "Main.cshtml";
 }
 
-@await Html.PartialAsync("header", Model);
-@await Html.PartialAsync("portfolio", Model);
-@await Html.PartialAsync("about", Model);
-@await Html.PartialAsync("contact", Model);
+
+@await Html.PartialAsync("header", Model)
+@await Html.GetBlockGridHtmlAsync(Model, "mainContent")
+@await Html.PartialAsync("contact", Model)
 
 
