--- a/C#/UmbracoPracticeProject/MarketPlaceApp/Views/_ViewImports.cshtml
+++ b/C#/UmbracoPracticeProject/MarketPlaceApp/Views/_ViewImports.cshtml
@@ -1,9 +1,11 @@
 @using MarketPlaceApp.Extensions
 @using Umbraco.Extensions
-@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
+@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels
 @using Umbraco.Cms.Web.Common.Views
 @using Umbraco.Cms.Core.Models.PublishedContent
+@using Umbraco.Cms.Core.Models.Blocks
 @using Microsoft.AspNetCore.Html
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Smidge
+@addTagHelper *, Our.Umbraco.TagHelpers
 @inject Smidge.SmidgeHelper SmidgeHelper
