added contact form (unactivated)

--- a/C#/UmbracoPracticeProject/MarketPlaceApp/Views/HomePage.cshtml
+++ b/C#/UmbracoPracticeProject/MarketPlaceApp/Views/HomePage.cshtml
@@ -8,6 +8,6 @@
 
 @await Html.PartialAsync("header", Model)
 @await Html.GetBlockGridHtmlAsync(Model, "mainContent")
-@await Html.PartialAsync("contact", Model)
+@await Html.PartialAsync("contactForm", Model)
 
 
