--- a/C#/UmbracoPracticeProject/MarketPlaceApp/Views/Partials/contactForm.cshtml
+++ b/C#/UmbracoPracticeProject/MarketPlaceApp/Views/Partials/contactForm.cshtml
@@ -2,7 +2,7 @@
 <section class="page-section" id="contact">
     <div class="container">
         <!-- Contact Section Heading-->
-        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Stuur Ons een bericht</h2>
         <!-- Contact Section Form-->
         <div class="row justify-content-center">
             <div class="col-lg-8 col-xl-7">
@@ -16,33 +16,34 @@
                 <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                     <!-- Name input-->
                     <div class="form-floating mb-3">
-                        <input class="form-control" id="name" type="text" placeholder="Enter your name..."
-                            data-sb-validations="required" />
-                        <label for="name">Full name</label>
-                        <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                        <input class="form-control" id="name" type="text" placeholder="Vul uw naam in..."
+                               data-sb-validations="required" />
+                        <label for="name">Voor- en Achternaam</label>
+                        <div class="invalid-feedback" data-sb-feedback="name:required">Er moet een naam zijn ingevuld.</div>
                     </div>
                     <!-- Email address input-->
                     <div class="form-floating mb-3">
                         <input class="form-control" id="email" type="email" placeholder="name@example.com"
-                            data-sb-validations="required,email" />
-                        <label for="email">Email address</label>
-                        <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                        <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                               data-sb-validations="required,email" />
+                        <label for="email">Email adres</label>
+                        <div class="invalid-feedback" data-sb-feedback="email:required">Er moet een e-mailadres zijn ingevuld.</div>
+                        <div class="invalid-feedback" data-sb-feedback="email:email">Geen geldig e-mailadres.</div>
                     </div>
                     <!-- Phone number input-->
                     <div class="form-floating mb-3">
-                        <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890"
-                            data-sb-validations="required" />
-                        <label for="phone">Phone number</label>
-                        <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.
+                        <input class="form-control" id="phone" type="tel" placeholder="06 12345678"
+                               data-sb-validations="required" />
+                        <label for="phone">Telefoon nummer</label>
+                        <div class="invalid-feedback" data-sb-feedback="phone:required">
+                            Er moet een telefoonnummer zijn ingevuld.
                         </div>
                     </div>
                     <!-- Message input-->
                     <div class="form-floating mb-3">
-                        <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..."
-                            style="height: 10rem" data-sb-validations="required"></textarea>
-                        <label for="message">Message</label>
-                        <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                        <textarea class="form-control" id="message" type="text" placeholder="Schrijf hier uw bericht..."
+                                  style="height: 10rem" data-sb-validations="required"></textarea>
+                        <label for="message">Bericht</label>
+                        <div class="invalid-feedback" data-sb-feedback="message:required">Er moet een bericht zijn ingevuld.</div>
                     </div>
                     <!-- Submit success message-->
                     <!---->
@@ -50,11 +51,10 @@
                     <!-- has successfully submitted-->
                     <div class="d-none" id="submitSuccessMessage">
                         <div class="text-center mb-3">
-                            <div class="fw-bolder">Form submission successful!</div>
-                            To activate this form, sign up at
+                            <div class="fw-bolder">Het bericht is succesvol !</div>
+                            Dit formulier moet nog worden geactiveerd!
                             <br />
-                            <a
-                                href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                            <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
                         </div>
                     </div>
                     <!-- Submit error message-->
@@ -62,10 +62,10 @@
                     <!-- This is what your users will see when there is-->
                     <!-- an error submitting the form-->
                     <div class="d-none" id="submitErrorMessage">
-                        <div class="text-center text-danger mb-3">Error sending message!</div>
+                        <div class="text-center text-danger mb-3">Helaas hebben we uw bericht niet kunnen versturen!</div>
                     </div>
                     <!-- Submit Button-->
-                    <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
+                    <button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Verzenden</button>
                 </form>
             </div>
         </div>
