partial css config

--- a/C#/UmbracoPracticeProject/MarketPlaceApp/Views/Partials/mainNavigation.cshtml
+++ b/C#/UmbracoPracticeProject/MarketPlaceApp/Views/Partials/mainNavigation.cshtml
@@ -5,9 +5,9 @@
     var siteSettings = Model.GetSiteSettings();
     if (siteSettings is null) return;
 }
- 
  <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+
+    <nav class="navbar navbar-expand-lg text-uppercase fixed-top bg-nav">
         <div class="container">
             <a class="navbar-brand" href="#page-top">@siteSettings.SiteName</a>
             <button class="navbar-toggler text-uppercase font-weight-bold bg-primary rounded" type="button"
