--- a/C#/UmbracoPracticeProject/MarketPlaceApp/Views/Main.cshtml
+++ b/C#/UmbracoPracticeProject/MarketPlaceApp/Views/Main.cshtml
@@ -20,17 +20,23 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
         type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="/css/styles.css" rel="stylesheet" asp-append-version="true"/>
+    <link href="/css/styles.css" rel="stylesheet"/>
+    @await Html.PartialAsync("styles")
 </head>
 
-<body id="page-top">
-    @await Html.PartialAsync("mainNavigation")
-
-    @RenderBody()
-
-    @await Html.PartialAsync("footer")
-   
-    @* @await Html.PartialAsync("partialModals") *@
+     
+<body>
+    <div class="container">
+    <header>
+        @await Html.PartialAsync("mainNavigation")
+    </header>
+    <main>
+        @RenderBody()
+    </main>
+    <footer>
+        @await Html.PartialAsync("footer")
+    </footer>
+    </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
@@ -40,6 +46,7 @@
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    
 </body>
 
 </html>
