--- a/C#/UmbracoPracticeProject/MarketPlaceApp/Views/Partials/blockgrid/Components/standardHeader.cshtml
+++ b/C#/UmbracoPracticeProject/MarketPlaceApp/Views/Partials/blockgrid/Components/standardHeader.cshtml
@@ -1,23 +1,25 @@
 ﻿@inherits UmbracoViewPage<Umbraco.Cms.Core.Models.Blocks.BlockGridItem<ContentModels.StandardHeader>>
+<style>
+.bg-header {
+    background-color: #@Model.Content.Value("headerBackgroundColor");
+}
+</style>
 
-
-<header class="masthead bg-primary text-center">
-    <div class="container d-flex align-items-center flex-column">
-        @if (Model.Content.Image != null)
-        {
-            <!-- Masthead Avatar Image-->
-            <img class="masthead-avatar mb-5" src="@Model.Content.Image.GetCropUrl(600)" alt="@Model.Content.Image.GetAltText()" />
-        }
-        @if (!string.IsNullOrEmpty(Model.Content.Title))
-        {
-            <!-- Masthead Heading-->
-            <h1 class="masthead-heading text-uppercase mb-0">@Model.Content.Title</h1>
-        }
-        @if (!string.IsNullOrEmpty(Model.Content.Subtitle))
-        {
-            <!-- Masthead Subheading-->
-            <p class="masthead-subheading font-weight-light mb-0">@Model.Content.Subtitle</p>
-        }
-        
-    </div>
-</header>
+<div class="container d-flex bg-header align-items-center flex-column">
+    @if (Model.Content.Image != null)
+    {
+        <!-- Masthead Avatar Image-->
+        <img class="masthead-avatar mb-5 mt-5" src="@Model.Content.Image.GetCropUrl(600)" alt="@Model.Content.Image.GetAltText()" />
+    }
+    @if (!string.IsNullOrEmpty(Model.Content.Title))
+    {
+        <!-- Masthead Heading-->
+        <h1 class="masthead-heading text-uppercase mb-0">@Model.Content.Title</h1>
+    }
+    @if (!string.IsNullOrEmpty(Model.Content.Subtitle))
+    {
+        <!-- Masthead Subheading-->
+        <p class="masthead-subheading font-weight-light mb-0">@Model.Content.Subtitle</p>
+    }
+    
+</div>
